[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = ""
authors = ["Jared Welch <jared@jeli.io>"]
readme = "README.md"
#packages = [{include = "."}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.28.1"
watchfiles = "^0.18.1"
rich = "^12.6.0"
typer = "^0"
more-itertools = "^9.0.0"



[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
mypy = "1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
ignore_missing_imports = true
